# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: tests.yml
page_analyzer/: __init__.py  app.py  connector.py  db.py  seocheck.py  seopage.py  url_utils.py
page_analyzer/scripts/: page_analyzer.py
page_analyzer/scripts/migrations/: init_db.py
page_analyzer/templates/: base.html  index.html  index1.html  notfound.html
page_analyzer/templates/urls/: index.html  summary.html
tests/: test_app.py
